# autoresearch-polymarket

./: .gitignore  README.md  pyproject.toml
data/: README.md
experiments/memory/: agent.py  dashboard.html  experiments.md  gen_dashboard.py  inspect_model.py  inspector.html  model.py  prepare.py  program.md  run.py
experiments/pgm/: PRD.md  dashboard.html  experiments.md  gen_dashboard.py  inspect_model.py  inspector.html  model.py  prepare.py  program.md  run.py
scrapers/news/: README.md  gdelt.py  gnews.py  guardian.py  mediastack.py  newsapi.py  reuters.py  rss_feeds.py  run_all.py  utils.py  wikipedia_current.py
scrapers/polymarket/: fetch_geopolitics.py
