[project]
name = "autoresearch"
version = "0.1.0"
description = "Autoresearch: news + polymarket scrapers and prediction experiments"
requires-python = ">=3.10"
dependencies = [
    "anthropic==0.85.0",
    "beautifulsoup4==4.13.3",
    "feedparser==6.0.11",
    "lxml==5.3.2",
    "numpy==2.2.4",
    "pgmpy==0.1.26",
    "playwright==1.52.0",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "sentence-transformers==4.1.0",
    "sqlite-vec==0.1.6",
]
